[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ghoul/ghoul.gd" type="Script" id=1]
[ext_resource path="res://src/light/kill_area.gd" type="Script" id=2]
[ext_resource path="res://src/light/die_particles.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=23]

[sub_resource type="CircleShape2D" id=2]
radius = 504.254

[node name="KinematicBody2D" type="KinematicBody2D" groups=["ghoul"]]
collision_layer = 6
script = ExtResource( 1 )
color = Color( 1, 0, 0, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.57079
polygon = PoolVector2Array( -8, 5, -6, 8, -7, 5, -6, 2, -4, 0, -2, 0, -1, 1, -1, 2, -3, 3, -3, 4, 0, 5, 3, 4, 3, 3, 1, 2, 1, 1, 2, 0, 4, 0, 6, 2, 7, 5, 6, 8, 8, 5, 7, -1, 4, -3, 2, -5, 0, -10, -2, -5, -4, -3, -7, -1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 23 )

[node name="trigger_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_area"]
shape = SubResource( 2 )

[node name="die_particles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.22
damping = 200.0
damping_random = 0.11
color = Color( 1, 0, 0, 1 )
script = ExtResource( 3 )

[node name="detect_particles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 16
lifetime = 0.25
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
damping = 200.0
color = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="on_kill_area_entered"]
[connection signal="body_entered" from="trigger_area" to="." method="_on_trigger_area_body_entered"]
